tests/ui/generic-associated-types/issue-92096.stderr
error: `C` does not live long enough
  --> $DIR/issue-92096.rs:17:5
   |
LL |     async move { c.connect().await }
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

